blender crashes during particle render #43409

Closed
opened 2015-01-25 16:15:56 +01:00 by governor · 5 comments

System Information
Operating system and graphics card
windows 8.1,nvidia GeForce gtx 860m

Blender Version
blender 2.73a bbf09d9

Short description of error
blender crashes
when we use particles, emitter to hair, weight painted, {F139341}when rendered in cycles with gpu compute in new window, after the render, object on which particle has been applied disappears until dolly in 3d window and try to re-render same file continuously for some no of times blender definitely crashes for sure.

Exact steps for others to reproduce the error
create a plane, and any other object to be used as particle then apply particle to plane, select required object from render setting in particle tab, I think I used weight paints to selected areas then try to render it some no times repeatedly, it crashes
sphere.blend

**System Information** Operating system and graphics card windows 8.1,nvidia GeForce gtx 860m **Blender Version** blender 2.73a bbf09d9 **Short description of error** blender crashes when we use particles, emitter to hair, weight painted, {[F139341](https://archive.blender.org/developer/F139341/grass1.blend)}when rendered in cycles with gpu compute in new window, after the render, object on which particle has been applied disappears until dolly in 3d window and try to re-render same file continuously for some no of times blender definitely crashes for sure. **Exact steps for others to reproduce the error** create a plane, and any other object to be used as particle then apply particle to plane, select required object from render setting in particle tab, I think I used weight paints to selected areas then try to render it some no times repeatedly, it crashes [sphere.blend](https://archive.blender.org/developer/F139342/sphere.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Viceroy

Added subscriber: @Viceroy
Bastien Montagne changed title from blender crashes to blender crashes during particle render 2015-01-25 20:10:32 +01:00
Lukas Tönne was assigned by Bastien Montagne 2015-01-25 20:10:32 +01:00

This issue was referenced by 4013ae6382

This issue was referenced by 4013ae63821a455ac25bd1d588321caac8bf8849
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 4013ae6382.

Closed by commit 4013ae6382.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43409
No description provided.