Fix T43409: Particle instancing on hair sometimes doesn't have a path cache available.